EXTRA_DIST =					\
	2cone.in				\
	2cone_ineq.in				\
	2cone_int.in				\
	2cone_supp.in				\
	2equations.in				\
	2equations_default.in			\
	3x3magic.in				\
	3x3magiceven.in				\
	3x3magiceven_lat.in			\
	3x3magiceven_sat.in			\
	4x4.in					\
	5x5.in					\
	5x5dual.in				\
	5x5Gorenstein.in			\
	6x6.in					\
	A443.in					\
	A543.in					\
	A553.in					\
	A643.in					\
	ChineseRemainder.in			\
	ChF_2_64.in				\
	ChF_8_1024.in				\
	VdM_16_1048576.in			\
	CondEffPlur.in				\
	Condorcet.in				\
	CondorcetN.in				\
	Condorcet.symm.in			\
	CondorcetInt.in				\
	CondorcetSemi.in			\
	Condorcet_one.in			\
	FortuneCookie.in			\
	InhomCong.in				\
	InhomCongLat.in				\
	InhomCongSigns.in			\
	InhomIneq.in				\
	InhomIneqIH.in				\
	InhomIneq_7.in				\
	InhomIneq_7_8.in			\
	InhomIneq_gen.in			\
	IntClMonId.in				\
	IntClMonIdSupp.in			\
	MonIdeal.in				\
	NonCMDiv.in				\
	NumSemi.in				\
	PluralityVsCutoff.in			\
	SquareMinusVertex.in			\
	SquareMinusVertexInhom.in		\
	SquareMinusVertexPolyh.in		\
	SquareMinusVertexStrict.in		\
	big.in					\
	bo5.in					\
	cross2.in				\
	cut_poly_7.in				\
	dehomogenization.in			\
	gen_inhom_nonpointed.in			\
	halfspace2.in				\
	hickerson-16.in				\
	hickerson-18.in				\
	hickerson-18plus1.in			\
	huge.in					\
	j462.in					\
	lattice_ideal.in			\
	knapsack_11_60.in			\
	lo6.in					\
	max_polytope_cand.in			\
	medium.in				\
	no_open_facet.in			\
	normface.in				\
	open_facet.in				\
	pedro2.in				\
	poly_hom_const.in			\
	poly_ineq.in				\
	polytope.in				\
	polytope_deg1.in			\
	rafa2416.in				\
	rational.in				\
	rationalIH.in				\
	rees.in					\
	semigraphoid5.in			\
	small.in				\
	strict_sign.in				\
	strictBorda.in				\
	subspace4.in
