EXTRA_DIST =					\
	2cone.in				\
	2cone_ineq.in				\
	2cone_int.in				\
	2equations.in				\
	2equations_default.in			\
	3x3magic.in				\
	3x3magiceven.in				\
	3x3magiceven_lat.in			\
	3x3magiceven_sat.in			\
	3x3magicNGD.in				\
	4x4.in					\
	5x5.in					\
	5x5dual.in				\
	5x5Gorenstein.in			\
	6x6.in					\
	A443.in					\
	A543.in					\
	A553.in					\
	A643.in					\
	B4.in					\
	baby.in					\
	both_precomputed.in			\
	ChineseRemainder.in			\
	ChF_2_64.in				\
	ChF_8_1024.in				\
	VdM_16_1048576.in			\
	CondEffPlur.in				\
	Condorcet.in				\
	CondorcetFV.in				\
	CondorcetN.in				\
	Condorcet.symm.in			\
	CondorcetInt.in				\
	CondorcetRange.in			\
	CondorcetExpansion.in			\
	CondorcetSemi.in			\
	Condorcet_one.in			\
	cube_3.in				\
	cube_3_dual_fac.in			\
	FortuneCookie.in			\
	InhomCong.in				\
	InhomCongLat.in				\
	InhomCongSigns.in			\
	InhomIneq.in				\
	InhomIneqInc.in				\
	InhomIneqIH.in				\
	InhomIneq_7.in				\
	InhomIneq_7_8.in			\
	InhomIneq_gen.in			\
	InhomIneq_prec.in			\
	IntClMonId.in				\
	IntClMonIdSupp.in			\
	IsEmpty.in				\
	IsNonEmpty.in				\
	MonIdeal.in				\
	NonCMDiv.in				\
	NumSemi.in				\
	pet.in					\
	PluralityVsCutoff.in			\
	square2.in				\
	SquareMinusVertex.in			\
	SquareMinusVertexInhom.in		\
	SquareMinusVertexPolyh.in		\
	SquareMinusVertexStrict.in		\
	big.in					\
	bo5.in					\
	cross2.in				\
	cut_poly_7.in				\
	dehomogenization.in			\
	euclid.in				\
	gen_inhom_nonpointed.in			\
	halfspace2.in				\
	halfspace3inhom-input.in 		\
	hickerson-16.in				\
	hickerson-18.in				\
	hickerson-18plus1.in			\
	huge.in					\
	j462.in					\
	knapsack_11_60.in			\
	lo6.in					\
	max_polytope_cand.in			\
	medium.in				\
	no_open_facet.in			\
	normface.in				\
	open_facet.in				\
	pentagon.in				\
	pedro2.in				\
	poly_hom_const.in			\
	poly_ineq.in				\
	polytope.in				\
	polytope_deg1.in			\
	pythagoras.in				\
	pythagoras_int.in			\
	pythagoras_rat.in			\
	rafa2416.in				\
	rational.in				\
	rationalFL.in				\
	rationalIH.in				\
	rational_inhom.in			\
	ratlat_2.in				\
	rees.in					\
	semigraphoid5.in			\
	small.in				\
	small_inhom_hbrc.in			\
	small_proj.in				\
	small_sh_proj.in			\
	small_proj_inhom.in			\
	small_sh_proj_inhom.in			\
	Stanleydec.in				\
	strict_sign.in				\
	strictBorda.in				\
	strictBorda_fixed_prec.in		\
	pythagoras.in				\
	pythagoras_int.in			\
	pythagoras_rat.in			\
	subspace4.in				\
	tame.in					\
	tame_prec.in				\
	monoid.in				\
	monoid_auto.in				\
	monoid_weight.in			\
	representations.in			\
	A443monoid.in				\
	Kwak80.in				\
	cone_latt_markov.in			\
	toric_ideal.in				\
	toric_ideal_grb.in			\
	lin_bin.in				\
	normal_toric_ideal.in			\
	non_toric.in				\
	poly_equ.in				\
	bracket_4.in				\
	bracket_4_comm.in			\
	bracket_4_comm_z2.in			\
	bracket_4_single.in			\
	bracket_4_z2.in				\
	bracket_3_cand.in			\
	bracket_3_part.in			\
	find_mod_grad.in			\
	mod_grad.in				\
	EH1.in					\
	InList					\
	SubModularConeN4_hom.in			\
	pet_new.in				\
	split_demo.zip				\
	[1,1][0,1].in				\
	chosen_2.in				\
	mini_ind.in				\
	midi_ind.in

EXTRA_DIST +=					\
	600cell-dual.in				\
	600cell.in				\
	buckyball-v.in				\
	dodecahedron-v.in			\
	grandantiprism.in			\
	great_rhombicuboctahedron-v.in		\
	icosahedron-v.in			\
	icosahedron-h.in			\
	icosahedron_prec.in			\
	perm7_d2_dual.in			\
	small_rhombicuboctahedron-v.in		\
	QConstSymb.in				\
	truncateddodecahedron.in
